[package]
name = "chrono_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sequencer_common = { path = "../sequencer_common" }
iodaemon = { path = "../iodaemon" }

clap = { version = "3.1", features = ["derive", "env"] }
rand = "0.8"
rkyv = { version = "0.7", features = ["validation", "size_32", "alloc"] }
tokio = { version = "1.19", features = ["full", "time", "rt", "rt-multi-thread"] }