[package]
name = "iodaemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
nix = {version = "0.24", features = ["zerocopy", "fs"] }
log = "0.4"
