[package]
name = "sequence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unsequenced_producer = { path = "../unsequenced_producer" }
tokio = { version = "1.16", features = ["full"] }
clap = { version = "3.1", features = ["derive"] }
byteorder = { version = "1.3" }
bytes = { version = "1.1.0" }
bytecheck = { version = "*" }
rkyv = { version = "0.7", features = ["validation"] }
