[package]
name = "sequencer_common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3"
byteorder = { version = "1.3" }
bytes = { version = "1.1.0" }
bytecheck = { version = "*" }
clap = { version = "3.1", features = ["derive"] }
memmap2 = "0.5"
pin-project = "1.0.10"
rkyv = { version = "0.7", default-features = false, features = ["validation", "size_32", "alloc"] }
tokio = { version = "1.20", features = ["full", "time", "rt", "rt-multi-thread"] }