[package]
name = "sequencer_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sequencer_common = { path = "../sequencer_common" }

bitflags = "1.3"
byteorder = { version = "1.3" }
bytes = { version = "1.1.0" }
bytecheck = { version = "*" }
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
fxhash = "0.2"
memmap2 = "0.5"
pin-project = "1.0.10"
rkyv = { version = "0.7", features = ["validation", "size_32", "alloc"] }
tokio = { version = "1.20", features = ["full", "time", "rt", "rt-multi-thread"] }

[dev-dependencies]
criterion = "0.3"
hex = "0.4.3"
lazy_static = "1.4.0"