[package]
name = "unsequenced_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.1" }
bytecheck = { version = "*", default-features = false }
rkyv = { version = "0.7", default-features = false, features = ["validation", "size_32", "alloc"] }
