[package]
name = "unsequenced_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
sequencer_common = { path = "../sequencer_common" }

bytes = { version = "1.1" }
bytecheck = { version = "*", default-features = false }
rkyv = { version = "0.7", default-features = false, features = ["validation", "size_32", "alloc"] }